# LAAFI_AI

./: .dvcignore  .gitignore  AGENT.md  Dockerfile  LICENSE  MANUAL_SETUP.md  PITCH_NOTES.md  README.md  ROADMAP.md  pyproject.toml  test_train.py  workflow.yaml
.github/workflows/: ci.yml
configs/: default.yaml  he_normalization.yaml
docs/: COLAB_WORKFLOW.md  notebook_refactor_audit.md
logging/: .env.example  README_LOGGER.md  drive_logger.py
notebooks/: 00_explication_debutant_pipeline.ipynb  00_setup.ipynb  01_colab_training_resnet50_pcam.ipynb  01_data_prep.ipynb  02_train.ipynb  03_eval.ipynb  04_inference.ipynb  requirements-colab.txt
outputs_final/: metrics_finales.csv  rapport_portfolio.md
scripts/: setup_dvc.sh
src/: api.py  inference.py  profiling.py  ui.py
src/laafi_ai/: __init__.py  calibration.py  checkpoints.py  cli_train.py  config.py  data.py  evaluate.py  evaluation_report.py  gradcam.py  inference.py  logging_utils.py  metrics.py  model.py  paths.py  stain_normalization.py  threshold_optimization.py  trainer.py
tests/: test_checkpoints.py  test_config.py  test_metrics.py  test_paths.py
