[project]
name = "laafi-ai"
version = "0.1.0"
description = "Binary metastasis classification on PatchCamelyon with ResNet50."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "datasets",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "Pillow",
    "PyYAML",
    "mlflow",
    "grad-cam",
    "torchstain>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
